adds commands to run